qt-restricted-extras/qscintilla6/gen_qsciscintilla.h

typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMimeData QMimeData;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
bool QsciScintilla_override_virtual_undo(void* self, intptr_t slot);
void QsciScintilla_virtualbase_undo(void* self);
bool QsciScintilla_override_virtual_unindent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_unindent(void* self, int line);
bool QsciScintilla_override_virtual_zoomIn(void* self, intptr_t slot);
void QsciScintilla_virtualbase_zoomIn(void* self, int range);
bool QsciScintilla_override_virtual_zoomIn2(void* self, intptr_t slot);
void QsciScintilla_virtualbase_zoomIn2(void* self);
bool QsciScintilla_override_virtual_zoomOut(void* self, intptr_t slot);
void QsciScintilla_virtualbase_zoomOut(void* self, int range);
bool QsciScintilla_override_virtual_zoomOut2(void* self, intptr_t slot);
void QsciScintilla_virtualbase_zoomOut2(void* self);
bool QsciScintilla_override_virtual_zoomTo(void* self, intptr_t slot);
void QsciScintilla_virtualbase_zoomTo(void* self, int size);
bool QsciScintilla_override_virtual_event(void* self, intptr_t slot);
bool QsciScintilla_virtualbase_event(void* self, QEvent* e);
bool QsciScintilla_override_virtual_changeEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_changeEvent(void* self, QEvent* e);
bool QsciScintilla_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* e);
bool QsciScintilla_override_virtual_wheelEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_wheelEvent(void* self, QWheelEvent* e);
bool QsciScintilla_override_virtual_canInsertFromMimeData(void* self, intptr_t slot);
bool QsciScintilla_virtualbase_canInsertFromMimeData(const void* self, QMimeData* source);
bool QsciScintilla_override_virtual_fromMimeData(void* self, intptr_t slot);
struct miqt_string QsciScintilla_virtualbase_fromMimeData(const void* self, QMimeData* source, bool* rectangular);
bool QsciScintilla_override_virtual_toMimeData(void* self, intptr_t slot);
QMimeData* QsciScintilla_virtualbase_toMimeData(const void* self, struct miqt_string text, bool rectangular);
bool QsciScintilla_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* e);
bool QsciScintilla_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* e);
bool QsciScintilla_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* e);
bool QsciScintilla_override_virtual_dropEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_dropEvent(void* self, QDropEvent* e);
bool QsciScintilla_override_virtual_focusInEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_focusInEvent(void* self, QFocusEvent* e);
bool QsciScintilla_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_focusOutEvent(void* self, QFocusEvent* e);
bool QsciScintilla_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QsciScintilla_virtualbase_focusNextPrevChild(void* self, bool next);
bool QsciScintilla_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_keyPressEvent(void* self, QKeyEvent* e);
bool QsciScintilla_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QsciScintilla_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QsciScintilla_virtualbase_inputMethodQuery(const void* self, int query);
bool QsciScintilla_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* e);
bool QsciScintilla_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_mouseMoveEvent(void* self, QMouseEvent* e);
bool QsciScintilla_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_mousePressEvent(void* self, QMouseEvent* e);
bool QsciScintilla_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* e);
bool QsciScintilla_override_virtual_paintEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_paintEvent(void* self, QPaintEvent* e);
bool QsciScintilla_override_virtual_resizeEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_resizeEvent(void* self, QResizeEvent* e);
bool QsciScintilla_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QsciScintilla_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QsciScintilla_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QsciScintilla_virtualbase_minimumSizeHint(const void* self);
bool QsciScintilla_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QsciScintilla_virtualbase_sizeHint(const void* self);
bool QsciScintilla_override_virtual_setupViewport(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QsciScintilla_override_virtual_eventFilter(void* self, intptr_t slot);
bool QsciScintilla_virtualbase_eventFilter(void* self, QObject* param1, QEvent* param2);
bool QsciScintilla_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QsciScintilla_virtualbase_viewportEvent(void* self, QEvent* param1);
bool QsciScintilla_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QsciScintilla_virtualbase_viewportSizeHint(const void* self);
bool QsciScintilla_override_virtual_initStyleOption(void* self, intptr_t slot);
void QsciScintilla_virtualbase_initStyleOption(const void* self, QStyleOptionFrame* option);
bool QsciScintilla_override_virtual_devType(void* self, intptr_t slot);
int QsciScintilla_virtualbase_devType(const void* self);
bool QsciScintilla_override_virtual_setVisible(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setVisible(void* self, bool visible);
bool QsciScintilla_override_virtual_heightForWidth(void* self, intptr_t slot);
int QsciScintilla_virtualbase_heightForWidth(const void* self, int param1);
bool QsciScintilla_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QsciScintilla_virtualbase_hasHeightForWidth(const void* self);
bool QsciScintilla_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QsciScintilla_virtualbase_paintEngine(const void* self);
bool QsciScintilla_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
void QsciScintilla_virtualbase_enterEvent(void* self, QEnterEvent* event);