qt-restricted-extras/qscintilla6/gen_qsciscintilla.nim

proc fQsciScintilla_virtualbase_undo(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_undo".}
proc fcQsciScintilla_override_virtual_undo(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_undo".}
proc fQsciScintilla_virtualbase_unindent(self: pointer, line: cint): void{.importc: "QsciScintilla_virtualbase_unindent".}
proc fcQsciScintilla_override_virtual_unindent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_unindent".}
proc fQsciScintilla_virtualbase_zoomIn(self: pointer, range: cint): void{.importc: "QsciScintilla_virtualbase_zoomIn".}
proc fcQsciScintilla_override_virtual_zoomIn(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_zoomIn".}
proc fQsciScintilla_virtualbase_zoomIn2(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_zoomIn2".}
proc fcQsciScintilla_override_virtual_zoomIn2(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_zoomIn2".}
proc fQsciScintilla_virtualbase_zoomOut(self: pointer, range: cint): void{.importc: "QsciScintilla_virtualbase_zoomOut".}
proc fcQsciScintilla_override_virtual_zoomOut(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_zoomOut".}
proc fQsciScintilla_virtualbase_zoomOut2(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_zoomOut2".}
proc fcQsciScintilla_override_virtual_zoomOut2(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_zoomOut2".}
proc fQsciScintilla_virtualbase_zoomTo(self: pointer, size: cint): void{.importc: "QsciScintilla_virtualbase_zoomTo".}
proc fcQsciScintilla_override_virtual_zoomTo(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_zoomTo".}
proc fQsciScintilla_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QsciScintilla_virtualbase_event".}
proc fcQsciScintilla_override_virtual_event(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_event".}
proc fQsciScintilla_virtualbase_changeEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_changeEvent".}
proc fcQsciScintilla_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_changeEvent".}
proc fQsciScintilla_virtualbase_contextMenuEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_contextMenuEvent".}
proc fcQsciScintilla_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_contextMenuEvent".}
proc fQsciScintilla_virtualbase_wheelEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_wheelEvent".}
proc fcQsciScintilla_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_wheelEvent".}
proc fQsciScintilla_virtualbase_canInsertFromMimeData(self: pointer, source: pointer): bool{.importc: "QsciScintilla_virtualbase_canInsertFromMimeData".}
proc fcQsciScintilla_override_virtual_canInsertFromMimeData(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_canInsertFromMimeData".}
proc fQsciScintilla_virtualbase_fromMimeData(self: pointer, source: pointer, rectangular: ptr bool): struct_miqt_string{.importc: "QsciScintilla_virtualbase_fromMimeData".}
proc fcQsciScintilla_override_virtual_fromMimeData(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_fromMimeData".}
proc fQsciScintilla_virtualbase_toMimeData(self: pointer, text: struct_miqt_string, rectangular: bool): pointer{.importc: "QsciScintilla_virtualbase_toMimeData".}
proc fcQsciScintilla_override_virtual_toMimeData(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_toMimeData".}
proc fQsciScintilla_virtualbase_dragEnterEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_dragEnterEvent".}
proc fcQsciScintilla_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_dragEnterEvent".}
proc fQsciScintilla_virtualbase_dragLeaveEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_dragLeaveEvent".}
proc fcQsciScintilla_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_dragLeaveEvent".}
proc fQsciScintilla_virtualbase_dragMoveEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_dragMoveEvent".}
proc fcQsciScintilla_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_dragMoveEvent".}
proc fQsciScintilla_virtualbase_dropEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_dropEvent".}
proc fcQsciScintilla_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_dropEvent".}
proc fQsciScintilla_virtualbase_focusInEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_focusInEvent".}
proc fcQsciScintilla_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_focusInEvent".}
proc fQsciScintilla_virtualbase_focusOutEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_focusOutEvent".}
proc fcQsciScintilla_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_focusOutEvent".}
proc fQsciScintilla_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QsciScintilla_virtualbase_focusNextPrevChild".}
proc fcQsciScintilla_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_focusNextPrevChild".}
proc fQsciScintilla_virtualbase_keyPressEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_keyPressEvent".}
proc fcQsciScintilla_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_keyPressEvent".}
proc fQsciScintilla_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_inputMethodEvent".}
proc fcQsciScintilla_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_inputMethodEvent".}
proc fQsciScintilla_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QsciScintilla_virtualbase_inputMethodQuery".}
proc fcQsciScintilla_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_inputMethodQuery".}
proc fQsciScintilla_virtualbase_mouseDoubleClickEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_mouseDoubleClickEvent".}
proc fcQsciScintilla_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_mouseDoubleClickEvent".}
proc fQsciScintilla_virtualbase_mouseMoveEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_mouseMoveEvent".}
proc fcQsciScintilla_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_mouseMoveEvent".}
proc fQsciScintilla_virtualbase_mousePressEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_mousePressEvent".}
proc fcQsciScintilla_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_mousePressEvent".}
proc fQsciScintilla_virtualbase_mouseReleaseEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_mouseReleaseEvent".}
proc fcQsciScintilla_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_mouseReleaseEvent".}
proc fQsciScintilla_virtualbase_paintEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_paintEvent".}
proc fcQsciScintilla_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_paintEvent".}
proc fQsciScintilla_virtualbase_resizeEvent(self: pointer, e: pointer): void{.importc: "QsciScintilla_virtualbase_resizeEvent".}
proc fcQsciScintilla_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_resizeEvent".}
proc fQsciScintilla_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QsciScintilla_virtualbase_scrollContentsBy".}
proc fcQsciScintilla_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_scrollContentsBy".}
proc fQsciScintilla_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QsciScintilla_virtualbase_minimumSizeHint".}
proc fcQsciScintilla_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_minimumSizeHint".}
proc fQsciScintilla_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QsciScintilla_virtualbase_sizeHint".}
proc fcQsciScintilla_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_sizeHint".}
proc fQsciScintilla_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QsciScintilla_virtualbase_setupViewport".}
proc fcQsciScintilla_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setupViewport".}
proc fQsciScintilla_virtualbase_eventFilter(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QsciScintilla_virtualbase_eventFilter".}
proc fcQsciScintilla_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_eventFilter".}
proc fQsciScintilla_virtualbase_viewportEvent(self: pointer, param1: pointer): bool{.importc: "QsciScintilla_virtualbase_viewportEvent".}
proc fcQsciScintilla_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_viewportEvent".}
proc fQsciScintilla_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QsciScintilla_virtualbase_viewportSizeHint".}
proc fcQsciScintilla_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_viewportSizeHint".}
proc fQsciScintilla_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QsciScintilla_virtualbase_initStyleOption".}
proc fcQsciScintilla_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_initStyleOption".}
proc fQsciScintilla_virtualbase_devType(self: pointer, ): cint{.importc: "QsciScintilla_virtualbase_devType".}
proc fcQsciScintilla_override_virtual_devType(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_devType".}
proc fQsciScintilla_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QsciScintilla_virtualbase_setVisible".}
proc fcQsciScintilla_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setVisible".}
proc fQsciScintilla_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QsciScintilla_virtualbase_heightForWidth".}
proc fcQsciScintilla_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_heightForWidth".}
proc fQsciScintilla_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QsciScintilla_virtualbase_hasHeightForWidth".}
proc fcQsciScintilla_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_hasHeightForWidth".}
proc fQsciScintilla_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QsciScintilla_virtualbase_paintEngine".}
proc fcQsciScintilla_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_paintEngine".}
proc fQsciScintilla_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_keyReleaseEvent".}
proc fcQsciScintilla_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_keyReleaseEvent".}
proc fQsciScintilla_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_enterEvent".}
